--- a/public/index.html
+++ b/public/index.html
@@ -281,21 +281,21 @@
             <div class="r-btn"><i class="fa-solid fa-chevron-right"></i></div>
             <h3>Popular Products in Wireless Internationally</h3>
             <ul class="product-slide">
-                <li><img src="images/pinter1.jpg" alt=""></li>
-                <li><img src="images/pinter2.jpg" alt=""></li>
-                <li><img src="images/pinter3.jpg" alt=""></li>
-                <li><img src="images/pinter4.jpg" alt=""></li>
-                <li><img src="images/pinter5.jpg" alt=""></li>
-                <li><img src="images/pinter6.jpg" alt=""></li>
-                <li><img src="images/pinter7.jpg" alt=""></li>
-                <li><img src="images/pinter8.jpg" alt=""></li>
-                <li><img src="images/pinter9.jpg" alt=""></li>
-                <li><img src="images/pinter10.jpg" alt=""></li>
-                <li><img src="images/pinter11.jpg" alt=""></li>
-                <li><img src="images/pinter12.jpg" alt=""></li>
-                <li><img src="images/pinter13.jpg" alt=""></li>
-                <li><img src="images/pinter14.jpg" alt=""></li>
-                <li><img src="images/pinter15.jpg" alt=""></li>
+                <li><img src="../images/B1.png" alt="" width ="120px"></li>
+                <li><img src="../images/B2.png" alt=""width ="120px"></li>
+                <li><img src="../images/B3.png" alt=""width ="120px"></li>
+                <li><img src="../images/B4.png" alt=""width ="120px"></li>
+                <li><img src="../images/B5.png" alt=""width ="120px"></li>
+                <li><img src="../images/B6.png" alt=""width ="120px"></li>
+                <li><img src="../images/B7.png" alt=""width ="120px"></li>
+                <li><img src="../images/B8.png" alt=""width ="120px"></li>
+                <li><img src="../images/B9.png" alt=""width ="120px"></li>
+                <li><img src="../images/B10.png" alt=""width ="120px"></li>
+                <li><img src="../images/B11.png" alt="" width ="120px"></li>
+                <li><img src="../images/B12.png" alt=""width ="120px"></li>
+                <li><img src="../images/B13.png" alt=""width ="120px"></li>
+                <li><img src="../images/B14.png" alt=""width ="120px"></li>
+                
             </ul>
         </div>
     </section>
@@ -306,20 +306,23 @@
             <div class="r-btn btn-1a"><i class="fa-solid fa-chevron-right"></i></div>
              <h3>Popular Products in PC Internationally</h3>
             <ul class="product-slide product-slide-1">
-                <li><img src="images/pc2.jpg" alt=""></li>
-                <li><img src="images/pc3.jpg" alt=""></li>
-                <li><img src="images/pc4.jpg" alt=""></li>
-                <li><img src="images/pc5.jpg" alt=""></li>
-                <li><img src="images/pc6.jpg" alt=""></li>
-                <li><img src="images/pc7.jpg" alt=""></li>
-                <li><img src="images/pc8.jpg" alt=""></li>
-                <li><img src="images/pc9.jpg" alt=""></li>
-                <li><img src="images/pc10.jpg" alt=""></li>
-                <li><img src="images/pc11.jpg" alt=""></li>
-                <li><img src="images/pc12.jpg" alt=""></li>
-                <li><img src="images/pc13.jpg" alt=""></li>
-                <li><img src="images/pc14.jpg" alt=""></li>
-                <li><img src="images/pc15.jpg" alt=""></li>
+                <li><img src="../images/B11.png" alt="" width ="120px"></li>
+                <li><img src="../images/B12.png" alt=""width ="120px"></li>
+                <li><img src="../images/B13.png" alt=""width ="120px"></li>
+                <li><img src="../images/B14.png" alt=""width ="120px"></li>
+                <li><img src="../images/A1.png" alt="" width ="150px"></li>
+                <li><img src="../images/A2.png" alt=""width ="150px"></li>
+                <li><img src="../images/A3.png" alt=""width ="150px"></li>
+                <li><img src="../images/B5.png" alt=""width ="120px"></li>
+                <li><img src="../images/B6.png" alt=""width ="120px"></li>
+                <li><img src="../images/B7.png" alt=""width ="120px"></li>
+                <li><img src="../images/B8.png" alt=""width ="120px"></li>
+                <li><img src="../images/B9.png" alt=""width ="120px"></li>
+                <li><img src="../images/A7.png" alt=""width ="150px"></li>
+                <li><img src="../images/A8.png" alt=""width ="150px"></li>
+                <li><img src="../images/A9.png" alt=""width ="150px"></li>
+                <li><img src="../images/A10.png" alt=""width ="150px"></li>
+                <li><img src="../images/A1.png" alt="" width ="150px"></li>
             </ul>
         </div>
     </section>
@@ -421,16 +424,21 @@
             <div class="r-btn btn-1d"><i class="fa-solid fa-chevron-right"></i></div>
              <h3>Top Sellers in Books</h3>
             <ul class="product-slide product-slide-2">
-                <li><img src="images/b1.jpg" alt=""></li>
-                <li><img src="images/b2.jpg" alt=""></li>
-                <li><img src="images/b3.jpg" alt=""></li>
-                <li><img src="images/b4.jpg" alt=""></li>
-                <li><img src="images/b5.jpg" alt=""></li>
-                <li><img src="images/b6.jpg" alt=""></li>
-                <li><img src="images/b7.jpg" alt=""></li>
-                <li><img src="images/b8.jpg" alt=""></li>
-                <li><img src="images/b9.jpg" alt=""></li>
-                <li><img src="images/b10.jpg" alt=""></li>
+                <li><img src="../images/A1.png" alt="" width ="150px"></li>
+                <li><img src="../images/A2.png" alt=""width ="150px"></li>
+                <li><img src="../images/A3.png" alt=""width ="150px"></li>
+                <li><img src="../images/A4.png" alt=""width ="150px"></li>
+                <li><img src="../images/A5.png" alt=""width ="150px"></li>
+                <li><img src="../images/A6.png" alt=""width ="150px"></li>
+                <li><img src="../images/A7.png" alt=""width ="150px"></li>
+                <li><img src="../images/A8.png" alt=""width ="150px"></li>
+                <li><img src="../images/A9.png" alt=""width ="150px"></li>
+                <li><img src="../images/A10.png" alt=""width ="150px"></li>
+                <li><img src="../images/A1.png" alt="" width ="150px"></li>
+                <li><img src="../images/A2.png" alt=""width ="150px"></li>
+                <li><img src="../images/A3.png" alt=""width ="150px"></li>
+                <li><img src="../images/A4.png" alt=""width ="150px"></li>
+                <li><img src="../images/A5.png" alt=""width ="150px"></li>
             </ul>
         </div>
     </section>
