--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
     <header>
         <div class="first">
             <div class="flex logo">
-            <a href="#"><img src="images/logo.png" alt=""></a>
+            <a href="#"><img src="../images/logo.png" alt=""></a>
             <div class="map flex">
                 <i class="fas fa-map-marker"></i>
                 <div>
@@ -116,7 +116,7 @@
         </div>
         <div class="flex right">
             <div class="flex lang">
-                <img src="images/usflag.jpg" alt="">
+                <img src="../images/Indiamap.png" alt="">
                 <i class="fas fa-caret-down"></i>
             </div>
             <div class="sign">
@@ -168,19 +168,19 @@
                         <h3>Gaming Accessories</h3>
                         <div class="box-a">
                             <div>
-                                <img src="images/ga1.jpg" alt="">
+                                <img src="../images/ga1.png" alt="">
                                 <span>Headsets</span>
                             </div>
                             <div>
-                                <img src="images/ga2.jpg" alt="">
+                                <img src="../images/ga2.png" alt="">
                                 <span>Keyboards</span>
                             </div>
                             <div>
-                                <img src="images/ga3.jpg" alt="">
+                                <img src="../images/ga3.png" alt="">
                                 <span>Computer mice</span>
                             </div>
                             <div>
-                                <img src="images/ga4.jpg" alt="">
+                                <img src="../images/ga4.png" alt="">
                                 <span>Chairs</span>
                             </div>
                         </div>
@@ -190,19 +190,19 @@
                         <h3>Shop By Category</h3>
                         <div class="box-a">
                             <div>
-                                <img src="images/sc1.jpg" alt="">
+                                <img src="../images/sc1.jpg" alt="">
                                 <span>Laptop</span>
                             </div>
                             <div>
-                                <img src="images/sc2.jpg" alt="">
+                                <img src="../images/sc2.jpg" alt="">
                                 <span>Video Games</span>
                             </div>
                             <div>
-                                <img src="images/sc3.jpg" alt="">
+                                <img src="../images/sc3.jpg" alt="">
                                 <span>Baby</span>
                             </div>
                             <div>
-                                <img src="images/sc4.jpg" alt="">
+                                <img src="../images/sc4.jpg" alt="">
                                 <span>Toy & Games</span>
                             </div>
                         </div>
